--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,221 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:background="@android:color/holo_blue_light"
+    android:id="@+id/scrollViewInfo"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".presentation.WeatherActivity">
 
-    <TextView
-        android:id="@+id/tvCity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textSize="24sp"
-        android:text="City"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvCountry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textSize="24sp"
-        android:text="Country"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@id/tvCity"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvLocaltime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textSize="24sp"
-        android:text="Localtime"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@id/tvCountry"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvTemperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textSize="32sp"
-        android:text="Temperature"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@id/ivCurrentWeather"
-        app:layout_constraintTop_toTopOf="@id/ivCurrentWeather"
-        app:layout_constraintBottom_toTopOf="@id/tvDescriptionWeather"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvWindLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="Wind"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@id/tvPressureLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />
-
-    <TextView
-        android:id="@+id/tvWind"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="10dp"
-        android:text="Wind"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@id/tvWindLabel"
-        app:layout_constraintStart_toStartOf="@+id/tvWindLabel"
-        app:layout_constraintTop_toBottomOf="@+id/tvWindLabel" />
-
-    <TextView
-        android:id="@+id/tvPressureLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="Pressure"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@id/tvHumidityLabel"
-        app:layout_constraintStart_toEndOf="@id/tvWindLabel"
-        app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />
-
-    <TextView
-        android:id="@+id/tvPressure"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="10dp"
-        android:text="Pressure"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/tvPressureLabel"
-        app:layout_constraintStart_toStartOf="@id/tvPressureLabel"
-        app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel" />
-
-    <TextView
-        android:id="@+id/tvHumidityLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="Humidity"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tvPressureLabel"
-        app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />
-
-    <TextView
-        android:id="@+id/tvHumidity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="10dp"
-        android:text="Humidity"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/tvHumidityLabel"
-        app:layout_constraintStart_toStartOf="@id/tvHumidityLabel"
-        app:layout_constraintTop_toBottomOf="@+id/tvHumidityLabel" />
-
-    <ImageView
-        android:id="@+id/ivCurrentWeather"
-        android:src="@drawable/ic_launcher_foreground"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_margin="15dp"
-        app:layout_constraintTop_toBottomOf="@id/tvCity"
-        app:layout_constraintEnd_toStartOf="@id/tvTemperature"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvDescriptionWeather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="Description"
-        android:textSize="24sp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/ivCurrentWeather"
-        app:layout_constraintEnd_toEndOf="@+id/tvTemperature"
-        app:layout_constraintStart_toStartOf="@+id/tvTemperature"
-        app:layout_constraintTop_toBottomOf="@+id/tvTemperature" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivCurrentWeather">
-
-    </View>
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:orientation="horizontal"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/holo_purple"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvWind">
+        android:background="@android:color/holo_blue_light">
 
-        <RadioButton
-            android:id="@+id/rbToday"
+        <TextView
+            android:id="@+id/tvCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="На сегодня"
+            android:layout_margin="10dp"
+            android:text="City"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvCountry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Country"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@id/tvCity"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvLocaltime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Localtime"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@id/tvCountry"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvTemperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Temperature"
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            app:layout_constraintBottom_toTopOf="@id/tvDescriptionWeather"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ivCurrentWeather"
+            app:layout_constraintTop_toTopOf="@id/ivCurrentWeather" />
+
+        <TextView
+            android:id="@+id/tvWindLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="Wind"
+            android:textColor="@color/black"
             android:textSize="16sp"
-            android:layout_weight="30"
-            android:layout_marginEnd="10dp"/>
+            app:layout_constraintEnd_toStartOf="@id/tvPressureLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />
 
-        <RadioButton
-            android:id="@+id/rbTomorrow"
+        <TextView
+            android:id="@+id/tvWind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="На завтра"
+            android:layout_margin="8dp"
+            android:layout_marginTop="10dp"
+            android:text="Wind"
+            android:textColor="@color/black"
             android:textSize="16sp"
-            android:layout_weight="30"
-            android:layout_marginEnd="10dp"/>
+            app:layout_constraintEnd_toEndOf="@id/tvWindLabel"
+            app:layout_constraintStart_toStartOf="@+id/tvWindLabel"
+            app:layout_constraintTop_toBottomOf="@+id/tvWindLabel" />
 
-        <RadioButton
-            android:id="@+id/rbThreeDays"
+        <TextView
+            android:id="@+id/tvPressureLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="На 3 дня"
-            android:layout_weight="30"
-            android:textSize="16sp"/>
+            android:layout_margin="15dp"
+            android:text="Pressure"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/tvHumidityLabel"
+            app:layout_constraintStart_toEndOf="@id/tvWindLabel"
+            app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />
 
-    </RadioGroup>
+        <TextView
+            android:id="@+id/tvPressure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginTop="10dp"
+            android:text="Pressure"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/tvPressureLabel"
+            app:layout_constraintStart_toStartOf="@id/tvPressureLabel"
+            app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/radioGroup"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+            android:id="@+id/tvHumidityLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="Humidity"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tvPressureLabel"
+            app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />
 
-        <androidx.recyclerview.widget.RecyclerView
+        <TextView
+            android:id="@+id/tvHumidity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginTop="10dp"
+            android:text="Humidity"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/tvHumidityLabel"
+            app:layout_constraintStart_toStartOf="@id/tvHumidityLabel"
+            app:layout_constraintTop_toBottomOf="@+id/tvHumidityLabel" />
+
+        <ImageView
+            android:id="@+id/ivCurrentWeather"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_margin="15dp"
+            android:src="@drawable/ic_launcher_foreground"
+            app:layout_constraintEnd_toStartOf="@id/tvTemperature"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvCity" />
+
+        <TextView
+            android:id="@+id/tvDescriptionWeather"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Description"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="@+id/ivCurrentWeather"
+            app:layout_constraintEnd_toEndOf="@+id/tvTemperature"
+            app:layout_constraintStart_toStartOf="@+id/tvTemperature"
+            app:layout_constraintTop_toBottomOf="@+id/tvTemperature" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivCurrentWeather">
+
+        </View>
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/holo_purple"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvWind">
+
+            <RadioButton
+                android:id="@+id/rbToday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="30"
+                android:text="На сегодня"
+                android:textSize="16sp" />
+
+            <RadioButton
+                android:id="@+id/rbTomorrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="30"
+                android:text="На завтра"
+                android:textSize="16sp" />
+
+            <RadioButton
+                android:id="@+id/rbThreeDays"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="30"
+                android:text="На 3 дня"
+                android:textSize="16sp" />
+        </RadioGroup>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvWeatherHourInfo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/radioGroup"
             tools:listitem="@layout/item_weather_info">
+
         </androidx.recyclerview.widget.RecyclerView>
-    </ScrollView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
