--- a/app/src/main/res/layout/item_weather_info.xml
+++ b/app/src/main/res/layout/item_weather_info.xml
@@ -15,6 +15,7 @@
         android:layout_margin="15dp"
         android:textSize="24sp"
         android:text="Time"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -26,6 +27,7 @@
         android:layout_margin="15dp"
         android:text="Degrees"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@id/ivForecastWeather"
         app:layout_constraintTop_toTopOf="@id/tvTime"
         app:layout_constraintBottom_toBottomOf="@id/tvTime"/>
@@ -39,6 +41,15 @@
         app:layout_constraintTop_toTopOf="@id/tvTime"
         app:layout_constraintBottom_toBottomOf="@id/tvTime"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/holo_red_dark"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTime"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
